--- a/Report.ipynb
+++ b/Report.ipynb
@@ -91,17 +91,19 @@
    "id": "de395aec",
    "metadata": {},
    "source": [
-    "BUFFER_SIZE = int(1e5)  # replay buffer size\n",
-    
-    "BATCH_SIZE = 64         # minibatch size\n",
-    
-    "GAMMA = 0.99            # discount factor\n",
-    
-    "TAU = 1e-3              # for soft update of target parameters\n",
-    
-    "LR = 5e-4               # learning rate \n",
-    
-    "UPDATE_EVERY = 4        # how often to update the network"
+    "* Replay Buffer Size =  int(1e5)\n",
+    "\n",
+    "* BATCH_SIZE = 64         \n",
+    "\n",
+    "* Discount Factor GAMMA = 0.99            \n",
+    "\n",
+    "* TAU (Soft Update Parameter) = 1e-3            \n",
+    "\n",
+    "* Learning Rate = 5e-4               \n",
+    "\n",
+    "* how often to update the network = 4 steps      \n",
+    "\n",
+    "* Optimizer = Adam"
    ]
   },
   {
